--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build:tsc": "tsc --outDir build/js",
-    "build": "parcel build index.html --out-dir docs"
+    "build": "rm -rf dist && mkdir dist && parcel build index.html --out-dir dist"
   },
   "eslintConfig": {
     "extends": "eslint-config-wesbos/typescript"
@@ -18,24 +18,24 @@
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.12.4",
-    "vite": "^3.2.2"
+    "vite": "^4.1.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-wesbos": "^3.1.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-wesbos": "^3.2.3",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   }
 }
