update build url

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm ci
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
       - name: Build
-        run: npm run build
+        run: npm run build -- --public-url /check-my-hair/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
